pidgin-lwqq : the webqq protocol for pidgin based on lwqq.
author : xiehuc@gmail.com

dev (08/18/2012):
	* new feature: support multi account
	* enhancement: not use qqnumber.use uin.big speed up
	* bug fix:     use offpic instead of cface. stable.

dev (08/12/2012):
	* new feature: support group whisper message
	* new feature: support change status

dev (08/10/2012):
	* disable change group markname
	* new feature: visit buddy qqzone

dev (08/08/2012):
	* new feature: support change buddy markname
	* new feature: support change group markname
	* new feature: support change buddy category
	* new feature: support confirm buddy request

master (08/04/2012):
	* face full support
	* introduce new async event/evset api
	* send message async
	* send picture async
	* use cface to upload buddy message pictures