@@ -18,6 +18,7 @@ see github:https://github.com/mathslinux/lwqq.
 * group whisper message
 * change status
 * support multi webqq account
+* support offline file (not official).
 
 ## empathy support (via telepathy-haze)
 * send / recv text messages
@@ -50,6 +51,7 @@ lwqq库是一个非常安全有效的webqq协议的库.
 * 支持访问QQ空间
 * 支持更改在线状态
 * 支持多账户登录
+* 支持离线文件(简易)
 
 ## empathy support (via telepathy-haze)
 * 支持发送接受文本消息
